# tarantula

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  Rocket.toml  deploy.sh
.github/workflows/: rust.yml
config/: log4rs.yaml
core/: Cargo.toml
core/src/core/: mod.rs
crawlresult/: Cargo.toml
crawlresult/src/: lib.rs  uri_result.rs
docs/: example.puml  uri-response-objects.puml  uri-service_page-load.puml
dom_parser/: Cargo.toml
dom_parser/src/: lib.rs
dom_parser/tests/: dom_parser_it.rs
dom_parser/tests/resources/: example.com.html
linkresult/: Cargo.toml
linkresult/src/: lib.rs  link_type_checker.rs  uri_result.rs  uri_service.rs
page_loader/: Cargo.toml
page_loader/src/: lib.rs  page_loader_service.rs  page_request.rs  page_response.rs
page_loader/src/commands/: fetch_header_command.rs  mod.rs  page_crawl_command.rs  page_download_command.rs
page_loader/src/events/: crawler_event.rs  mod.rs
page_loader/src/http/: http_client.rs  http_utils.rs  mod.rs
page_loader/src/response_timings/: mod.rs
page_loader/src/task_context/: mod.rs  robots_service.rs  task_context.rs
page_loader/src/task_context_manager/: mod.rs
page_loader/tests/: page_crawl_command_it.rs
resources/test/: example.com.html  t3n.de.html
responses/: Cargo.toml
responses/src/: complete_response.rs  crawl_status.rs  get_response.rs  head_response.rs  lib.rs  link.rs  page_response.rs  redirect.rs  response_timings.rs  run_config.rs  status_code.rs  uri_protocol.rs  uri_scope.rs
server/: Cargo.toml
server/src/: http.rs  lib.rs
server/tests/: http_it.rs
src/: cli.yaml  lib.rs  main.rs  page.rs
src/dom/: parser.rs
src/lib/: mod.rs  page.rs
testutils/: Cargo.toml
testutils/src/: lib.rs
