[package]
name = "tarantula"
version = "0.1.0"
authors = ["Daniel Bunte (@DuncanConroy) <daniel.bunte.84+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "dom_parser",
    "linkresult",
    "page_loader",
    "responses",
    "server",
]

[dependencies]
# internal
page_loader = { path = "page_loader" }
responses = { path = "responses" }
server = { path = "server" }
# external
clap = { version = "2.33", features = ["yaml"] }
hyper = { version = "^0.14.15", features = ["full"] }
hyper-tls = "^0.5.0"
log = "0.4.14"
log4rs = "1.0.0"
num_cpus = "1.13.0"
rocket = "0.5.0-rc.1"
tokio = { version = "^1", features = ["full"] }

[dev-dependencies]
testutils = { path = "testutils" }