[package]
name = "tarantula"
version = "0.1.0"
authors = ["Daniel Bunte (@DuncanConroy) <daniel.bunte.84+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "dom_parser",
    "linkresult",
    "page_loader",
    "server",
]

[dependencies]
# internal
page_loader = { path = "page_loader" }
responses = { git = "https://lechuck.hopto.org:2443/DuncanConroy/tarantula-responses/" }
server = { path = "server" }
# external
console-subscriber = "^0.1.0"
clap = { version = "2.34.0", features = ["yaml"] }
hyper = { version = "^0.14.16", features = ["full"] }
hyper-tls = "^0.5.0"
log = "0.4.14"
log4rs = "1.0.0"
num_cpus = "1.13.1"
rocket = "0.5.0-rc.1"
tokio = { version = "^1.15.0", features = ["full", "tracing"] }
tracing-subscriber = "^0.3.3"

[dev-dependencies]
testutils = { path = "testutils" }