[package]
name = "dom_parser"
version = "0.1.0"
authors = ["Daniel Bunte (@DuncanConroy) <daniel.bunte.84+github@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
responses = { git = "https://lechuck.hopto.org:2443/DuncanConroy/tarantula-responses/" }
# external
chrono = "0.4.19"
ego-tree = "0.6.2"
linkresult = { path = "../linkresult" }
scraper = "0.12.0"
