[package]
name = "linkresult"
version = "0.1.0"
authors = ["Daniel Bunte (@DuncanConroy) <daniel.bunte.84+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
responses = { git = "***REMOVED***" }
#external
chrono = "0.4.19"
fancy-regex = "^0.7.1"
hyper = { version = "^0.14.16", features = ["full"] }
log = "0.4.14"
rand = "0.8.4"
regex = "^1.5.4"
scraper = "0.12.0"
urlencoding = "2.1.0"
