[package]
name = "linkresult"
version = "0.1.0"
authors = ["Daniel Bunte (@DuncanConroy) <daniel.bunte.84+github@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
responses = { path = "../responses" }
#external
chrono = "0.4.19"
fancy-regex = "0.11.0"
hyper = { version = "^0.14.16", features = ["full"] }
rand = "0.8.4"
regex = "^1.5.5"
tracing = "^0.1.29"
urlencoding = "2.1.0"
