[package]
name = "page_loader"
version = "0.1.0"
authors = ["Daniel Bunte <daniel.bunte.84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
dom_parser = { path = "../dom_parser" }
linkresult = { path = "../linkresult" }
responses = { git = "https://lechuck.hopto.org:2443/DuncanConroy/tarantula-responses/" }
# external
async-trait = "0.1.52"
chrono = "0.4.19"
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.14"
log4rs = "1.0.0"
num_cpus = "1.13.1"
rand = "0.8.4"
robotstxt-with-cache = "0.4.0"
tokio = { version = "^1.15.0", features = ["full"] }
tracing = "^0.1.29"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
faux = "^0.1.5"
mockall = "^0.11.0"
mockall_double = "0.2.1"
mocktopus = "0.7.11"