[package]
name = "page_loader"
version = "0.1.0"
authors = ["Daniel Bunte <daniel.bunte.84@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
dom_parser = { path = "../dom_parser" }
linkresult = { path = "../linkresult" }
responses = { git = "https://lechuck.hopto.org:2443/DuncanConroy/tarantula-responses/" }
# external
async-trait = "0.1.52"
chrono = "0.4.19"
hyper = { version = "0.14.16", features = ["full"] }
hyper-tls = "0.5.0"
num_cpus = "1.13.1"
rand = "0.8.4"
robotstxt-with-cache = "0.4.0"
tokio = { version = "^1.15.0", features = ["full"] }
tracing = "^0.1.29"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
mockall = "^0.11.0"
