[package]
name = "responses"
version = "0.1.0"
authors = ["Daniel Bunte (@DuncanConroy) <daniel.bunte.84+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external
chrono = "0.4.19"
serde = "1.0.128"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
