[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
page_loader = { path = "../page_loader" }
responses = { git = "***REMOVED***" }
# external
hyper = { version = "0.14.16", features = ["full"] }
hyper-tls = "0.5.0"
num_cpus = "^1.13.1"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets", "tls"] }
serde = "^1.0.132"
uuid = { version = "0.8.2", features = ["serde", "v4"] }